# deepstream-test1-app_rtsp

./: CMakeLists.txt  README.md  deepstream_test1_app.c  deepstream_test1_app_demo_rtsp.c  dstest1_pgie_config.txt
includes/: gst-nvevent.h  gst-nvmessage.h  gst-nvquery.h  gstnvdsinfer.h  gstnvdsmeta.h  nvbufsurface.h  nvbufsurftransform.h  nvds_dewarper_meta.h  nvds_latency_meta.h  nvds_logger.h  nvds_msgapi.h  nvds_opticalflow_meta.h  nvds_version.h  nvdsinfer.h  nvdsinfer_context.h  nvdsinfer_custom_impl.h  nvdsinfer_dbscan.h  nvdsinfer_tlt.h  nvdsinfer_utils.h  nvdsmeta.h  nvdsmeta_schema.h  nvdstracker.h  nvll_osd_api.h  nvll_osd_struct.h
